--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
             <h2>Hallo, I'm Anwar<br><span>Web Developer</span></h2>
             <h3>I build Web sites</h3>
-            <a href="#projects" class="main-btn">View my Worck</a>
+            <a href="#projects" class="main-btn">View my Work</a>
             <div class="social-icons">
                 <a href="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="facebook"><i class="fa-brands fa-square-facebook"></i></a>
